# numid

./: .travis.yml  Cargo.toml  README.md
src/: example.rs  exemple.rs  lib.rs  serde.rs
tests/: allow_non_camel_case_types.rs  conflicting_trait_impl.rs  external.rs  external_no_std.rs  numid_u128.rs
tests/compile_fail/: const_create_lower.rs  const_create_lower_u128.rs  non_camel_case_type.rs  private_numid.rs
