[package]
name = "numid"
version = "0.1.2"
authors = ["Nicolas Poelen"]
edition = "2018"

description = "A macro for generating structures which behave like numerical id."
license = "MIT"
keywords = ["macro", "id", "struct"]
#categories = ["no-std"] # unimplemented
readme = "README.md"
repository = "https://github.com/powlpy/numid"
documentation = "https://docs.rs/numid"

[features]
default = []
example = []

[package.metadata.docs.rs]
features = [ "example" ]
