[package]
name = "numid"
version = "0.2.8"
authors = ["Nicolas Poelen"]
edition = "2018"

description = "A macro for generating structures which behave like numerical id."
license = "MIT"
keywords = ["macro", "id", "struct", "static"]
categories = ["no-std"]
readme = "README.md"
repository = "https://github.com/powlpy/numid"
documentation = "https://docs.rs/numid"

exclude = [
    ".travis.yml"
]

[badges]
travis-ci = { repository = "powlpy/numid" }

[dependencies]
const_fn_assert = "0.1"

[features]
default = ["display"]
display = []
example = []

[package.metadata.docs.rs]
all-features = true
